--- a/gui/MainWindow.form
+++ b/gui/MainWindow.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="735" height="512"/>
+      <xy x="48" y="54" width="793" height="512"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -136,7 +136,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="3c9ed" class="javax.swing.JTree" binding="tree1" default-binding="true">
+                      <component id="3c9ed" class="javax.swing.JTree" binding="searchTree" default-binding="true">
                         <constraints/>
                         <properties/>
                       </component>
@@ -154,7 +154,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <tabbedpane id="c8a22" binding="tabbedPane1" default-binding="true">
+                  <tabbedpane id="c8a22" binding="playlists" default-binding="true">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                         <preferred-size width="200" height="200"/>
@@ -172,7 +172,21 @@
                         </constraints>
                         <properties/>
                         <border type="none"/>
-                        <children/>
+                        <children>
+                          <scrollpane id="4d94b">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                            <border type="none"/>
+                            <children>
+                              <component id="c4975" class="javax.swing.JTable" binding="table1" default-binding="true">
+                                <constraints/>
+                                <properties/>
+                              </component>
+                            </children>
+                          </scrollpane>
+                        </children>
                       </grid>
                     </children>
                   </tabbedpane>
