--- a/gui/MainWindow.form
+++ b/gui/MainWindow.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gui.MainWindow">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="10"/>
+    <margin top="0" left="0" bottom="5" right="10"/>
     <constraints>
       <xy x="48" y="54" width="793" height="512"/>
     </constraints>
@@ -40,7 +40,7 @@
             <properties>
               <horizontalAlignment value="0"/>
               <horizontalTextPosition value="0"/>
-              <text value="Label"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -58,7 +58,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Anterior"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="a24d4" class="javax.swing.JButton" binding="play" custom-create="true">
@@ -66,7 +66,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Play"/>
+              <text value=""/>
             </properties>
           </component>
           <component id="506c4" class="javax.swing.JButton" binding="next" custom-create="true">
@@ -74,7 +74,7 @@
               <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Siguiente"/>
+              <text value=""/>
             </properties>
           </component>
           <hspacer id="34dfa">
@@ -92,7 +92,7 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="stop"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
