--- a/gui/MainWindow.form
+++ b/gui/MainWindow.form
@@ -165,7 +165,7 @@
                     </properties>
                     <border type="none"/>
                     <children>
-                      <grid id="b6632" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="b6632" binding="defaultPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <tabbedpane title="Default"/>
@@ -173,7 +173,7 @@
                         <properties/>
                         <border type="none"/>
                         <children>
-                          <scrollpane id="4d94b">
+                          <scrollpane id="4d94b" binding="defaultScrollPane">
                             <constraints>
                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                             </constraints>
